outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-23_13-25-11/evaluations/problem_eval3299813290012569949_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance in the remaining path. It dynamically adjusts selection probabilities based on a weighted combination of distance and promise, using a softmax function to ensure exploration of promising nodes while preserving some randomness for adaptability.}
                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance in the remaining path. It dynamically adjusts selection probabilities based on a weighted combination of distance and promise, using a softmax function to ensure exploration of promising nodes while preserving some randomness for adaptability.}
                                                                                                                                                                                                                                                                  ^
SyntaxError: unmatched '}'
